FILES/style.css
BODY {
  background-image: url('_LOGO_');
  background-repeat: no-repeat;
  background-position: center -10px;
}

/* BODY.themeP DIV.import_export */

/* GREY THEME */

.themeG, .themeG TABLE.colored TD, .themeG .BodyRight, .themeG>SPAN.BodyRight
{ background-color: #F8F8F8 }
.themeG TH, .themeG TH INPUT, .themeG .table_title,
.themeG .tab_selected, .themeG>SPAN.tab_selected
{ background-color: #E8E8E8 }
.themeG .sorted, .themeG .toggled, TH.themeG>SPAN.toggled
{ background-color: #DDD }
.themeG .border, TH.themeG.border
{ border: 1px solid #888 ; }
.themeG .table_title
{ border-bottom: 1px solid #888 ; }


/* PRINTEMPS THEME */

.themeP, .themeP TABLE.colored TD, .themeP .BodyRight, .themeP>SPAN.BodyRight
{ background-color: #F9FFF6 }
.themeP TH, .themeP TH INPUT, .themeP .table_title,
.themeP .tab_selected, .themeP>SPAN.tab_selected
{ background-color: #DFD ; }
.themeP .sorted, .themeP .toggled, TH.themeP>SPAN.toggled
{ background-color: #BFB ; }
.themeP .border, TH.themeP.border
{ border: 1px solid #0F0 ; }
.themeP .table_title
{ border-bottom: 1px solid #0F0 ; }

/* AUTOMNE THEME */

.themeA, .themeA TABLE.colored TD, .themeA .BodyRight, .themeA>SPAN.BodyRight
{ background-color: #FFF5E0 }
.themeA TH, .themeA TH INPUT, .themeA .table_title,
.themeA .tab_selected, .themeA>SPAN.tab_selected
{ background-color: #FDC ; }
.themeA .sorted, .themeA .toggled, TH.themeA>SPAN.toggled
{ background-color: #FCB ; }
.themeA .border, TH.themeA.border
{ border: 1px solid #FA6 ; }
.themeA .table_title
{ border-bottom: 1px solid #FA6 ; }

/* Dossier THEME */

.themeD, .themeD TABLE.colored TD, .themeD .BodyRight, .themeD>SPAN.BodyRight
{ background-color: #FFF7FD }
.themeD TH, .themeD TH INPUT, .themeD .table_title,
.themeD .tab_selected, .themeD>SPAN.tab_selected
{ background-color: #FFDDF6 ; }
.themeD .sorted, .themeD .toggled, TH.themeD>SPAN.toggled
{ background-color: #FFC5EF ; }
.themeD .border, TH.themeD.border
{ border: 1px solid #FF7CDB ; }
.themeD .table_title
{ border-bottom: 1px solid #FF7CDB ; }

/* Referent THEME */

.themeR, .themeR TABLE.colored TD, .themeR .BodyRight, .themeR>SPAN.BodyRight
{ background-color: #F0FFFF }
.themeR TH, .themeR TH INPUT, .themeR .table_title,
.themeR .tab_selected, .themeR>SPAN.tab_selected
{ background-color: #CFFEFF ; }
.themeR .sorted, .themeR .toggled, TH.themeR>SPAN.toggled
{ background-color: #99FDFF ; }
.themeR .border, TH.themeR.border
{ border: 1px solid #00E9F1 ; }
.themeR .table_title
{ border-bottom: 1px solid #00E9F1 ; }

/* BLACK AND WHITE THEME */

.themeBW, .themeBW TABLE.colored TD, .themeBW .BodyRight,
TH.themeBW>SPAN.BodyRight, TH.themeBW>SPAN.tab_selected
{ background-color: #FFF ; color: #000 }

.themeBW .border, .themeBW.border
{ border: 1px solid #000 ; }
.themeBW .table_title
{ border-bottom: 1px solid #000 ; }

.themeBW #cellbox_tip:hover,
.themeBW DIV.import_export
{
    border: 1px solid black ;
    opacity: 1 ;
}

.themeBW TABLE.colored TH,
.themeBW TABLE.colored CAPTION,
.themeBW .table_title,
.themeBW span.toggled
{
    background: #FFF ;
    color: #000 ;
    font-weight: bold ;
}

.themeBW A, .themeBW [onclick] { color: #000 }

BODY, TABLE TD, #current_input, TR.filter INPUT {
  border: none ;
  font-family: sans-serif ;
  cursor: text ;
}
INPUT {
    cursor: text ;
    background: #FFF ;
    border: 1px solid #888 ;
}

SELECT {
    border: 1px solid #888 ;
    border-radius: 0.5em ;
    vertical-align: top ;
}

A { text-decoration: none; }

.clickable {
    cursor: pointer ;
}
.clickable:hover {
    text-decoration: underline ;
}

BODY H1 { font-size: 90% }

IMG { cursor: default; }

BODY, BODY TABLE INPUT, BODY TABLE TD, BODY TH, BODY P, BODY H1 { 
  padding: 0px ;
  margin: 0px;
}

.identity {
  float: right ;
  margin-left:2em;
}

.identity TD {
    font-size: 80% ;
    white-space: nowrap ;
    text-align: right;
}

.identity .icons {
    font-weight:bold ;
    font-size:170% ;
}

.identity IMG { height: 0.8em }


DIV.import_export.top_right {
    top: 2em ;
    right: 0px ;
    left: auto ;
    max-width: 35em ;
    border: 1px solid black ;
    opacity: 0.9 ;
    background-color: #FFF ;
}

DIV.import_export.help_popup {
    bottom: 0px ;
    padding-right: 0px ;
    overflow: hidden ;
}

DIV.top_right P { margin-top: 0.8em ; }

DIV.scrollable {
    overflow: auto ;
    max-height: 97% ;
}

#updating { display:none; background-color: orange }

.table_ro { background-color: #F00; color: #FFF }

.title_pointers {
  font-size: 70% ;
}

.title_pointers DIV.tipped {
  padding-top: 1em;
}

.shortcut {
  background-color: #0F0 ;
  margin-left: 1em ;
  position: absolute;
  right: 0px ;
}


TABLE.colored { 
  background-color: #999 ;
  border-spacing: 0px ;
  empty-cells:show;
  border-left: 1px solid #999 ;
  border-top: 1px solid #999 ;
  font-weight: normal ;
}

TABLE.colored TD, TABLE.colored TH {
    border-bottom: 1px solid #999 ;
    border-right: 1px solid #999 ;
}

/* To find if the cursor is inside the table */
DIV#divtable:hover DIV#hover { 
  left: -20px;
}
DIV#divtable DIV#hover { 
  position:absolute;
  left: -10px;
}

DIV#divtable { 
  width: 100% ;
}

TABLE#thetable { 
  table-layout: fixed ;
  width: 100% ;
  border-right: 2px solid black ; /* border of current_cell in last column */
}

/*
TABLE#menutop SELECT:focus { right: 0px ;  }
*/

TABLE#thetable TD, TABLE#thetable TH, TABLE#thetable TH SPAN, TABLE#thetable INPUT, #current_input { 
  white-space: nowrap;
  overflow: hidden ;
  vertical-align: top ;
  text-align: left;
  padding: 0px ;
  margin: 0px;
}

TABLE#thetable TD {
    height: 1.28em ;  /* 1.1 was not good for Chrome */
    position: relative ; /* To allow positonning of _key value in the cell */
}

.sorted_value {
    font-size: 60% ;
    line-height: 1em ;
    color: #66F ;
    position:absolute;
}

DIV#current_input_div { 
  position: absolute ;
  border: 3px solid grey ;
}

DIV#current_input_div INPUT#current_input {
  width: 100% ;
  height: 100% ;
}
/* ... */

